# baikalctl

./: .bumpversion.cfg  .gitignore  Makefile  defaults  docker-compose-dev.yaml  docker-compose.yaml  dot-baikalctl.example  pyproject.toml  pytest.ini  requirements.txt
baikalctl/: __init__.py  app.py  browser.py  cli.py  client.py  client_cli.py  firefox_profile.py  models.py  profile.py  server.py  server_cli.py  settings.py  version.py
docker/: Dockerfile  apt_sources  client  docker-compose  docker-compose.yaml  entrypoint  pinned_packages  run  server  show-config  xstartup
docs/: Makefile  cli.rst  conf.py  index.rst  installation.rst  make.bat
make/: docker.mk
proxy/: 00-configure.sh  Dockerfile  nginx.conf  nginx.conf.in  require_client_cert
tests/: conftest.py  test_apiclient.py  test_cli.py  test_profile.py
